# models/file.go
@@ -6,11 +6,13 @@ import (
 )
 
 type FileModel struct {
-	Name       string `json:"name"`
-	UploadedAt int64  `json:"uploaded_at"`
-	ExpiredAt  int64  `json:"expired_at"`
-	Password   string `json:"password"`
-	Size       int64  `json:"size"`
+	Name       string  `json:"name"`
+	UploadedAt int64   `json:"uploaded_at"`
+	ExpiredAt  int64   `json:"expired_at"`
+	Password   string  `json:"password"`
+	Size       int64   `json:"size"`
+	PasteBin   bool    `json:"paste_bin"`
+	Content    *string `json:"content"`
 }
 
 func (f FileModel) IsExpired() bool {
@@ -26,5 +28,7 @@ func (f FileModel) ToResponse() FileInfoResponse {
 		ExpiredAt:  f.ExpiredAt,
 		Password:   f.Password != "",
 		Size:       f.Size,
+		PasteBin:   f.PasteBin,
+		Content:    f.Content,
 	}
 }
