# models/req.go
@@ -8,3 +8,10 @@ type DownloadRequest struct {
 	ID       string `json:"id"`
 	Password string `json:"password"`
 }
+
+type NewPasteBinRequest struct {
+	Name     string `json:"name"`
+	Content  string `json:"content"`
+	Password string `json:"password"`
+	ExpireAt int64  `json:"expire_at"`
+}
